# image-scaler-all

./: README.md
ImageScalerCSharp/: ImageScalerCSharp.sln
ImageScalerCSharp/ImageScalerCSharp/: ImageScalerCSharp.csproj  Program.cs  Startup.cs  WeatherForecast.cs  imagetest.html  imagetest_png.html
ImageScalerCSharp/ImageScalerCSharp/Controllers/: ImageScalerService.cs  ImgeScalerController.cs  WeatherForecastController.cs
ImageScalerCSharp/ImageScalerCSharp/Properties/: launchSettings.json
image-scaler-rust/: Cargo.toml  Rocket.toml
image-scaler-rust/src/: main.rs
imageScalerGo/: main.go  request.go
imageScalerMicronaut/: micronaut-cli.yml  pom.xml  test.html  test_cloudinary.html  test_cloudinary_jpg.html  test_jpg.html
imageScalerMicronaut/src/main/kotlin/imageScalerMicronaut/: Application.kt  ImageScalerController.kt
imageScalerMicronaut/src/main/resources/: application.yml
imageScalerMicronaut/src/test/kotlin/imageScalerMicronaut/: ImageScalerMicronautTest.kt
uuclyyimagecpprest/: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  cmake_install.cmake  mycmaketest - Verknüpfung.lnk
uuclyyimagecpprest/src/: CMakeLists.txt  Makefile  cmake_install.cmake  handlerequest.cpp  imagescalerservice.cpp  imagescalerservice.h  mycmaketest.cpp  mycmaketest.h
uuclyyimagecpprest/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  mytest.cpp  test.html  test_jpg.html
