[package]
name = "image-scaler-rust"
version = "0.1.0"
authors = ["sweisker <sven.weisker@diva-e.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
image = "0.23.12"
libvips = "1.4.2"
lazy_static = "1.4.0"